examples/test/testpolicy7267.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7267
  namespace: namespace486
spec:
  podSelector:
    matchLabels:
      key48: value24
      key6: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value0
          key41: value17
          key40: value47
      podSelector:
        matchLabels:
          key19: value6
          key6: value41
          key15: value14
